--- a/api/package.json
+++ b/api/package.json
@@ -21,7 +21,6 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
-    "nodemon": "^2.0.1",
     "pg": "^7.14.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.2",
@@ -29,6 +28,8 @@
     "yup": "^0.27.0"
   },
   "devDependencies": {
+    "nodemon": "^2.0.1",
+    "sequelize-cli": "^5.5.1",
     "sucrase": "^3.10.1"
   }
 }
